--- a/style.css
+++ b/style.css
@@ -196,11 +196,18 @@ label>span {
 #remove-book-form-head {
     font-weight: 500;
     margin-top: 2px;
-    border-bottom: solid .5px rgb(58, 58, 58);
+    border-bottom: solid .1px rgb(58, 58, 58);
 }
 
 #remove-book-form-body {
     color: rgb(84, 83, 83);
     font-size: .85rem;
     margin-top: -5px;
+}
+
+@media only screen and (max-device-width: 480px) {
+    body {
+        -webkit-text-size-adjust: 100%;
+        -ms-text-size-adjust: 100%;
+    }
 }
